// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`free unused presets after program Update works as planned: Before anything 1`] = `
Object {
  "createState": Object {},
  "getState": Object {
    "users": Object {
      "u1": Object {
        "result": Object {
          "_id": "u1",
          "email": "u1",
        },
      },
    },
  },
  "updateState": Object {},
}
`;

exports[`free unused presets after program Update works as planned: after All having been freed up again 1`] = `
Object {
  "createState": Object {
    "freePresetGetter.presetModel": Object {
      "result": "c1bbbbbbbbbbbbbbbb398765",
    },
  },
  "getState": Object {
    "presetAssistant": Object {
      "b19999999999999999999999": Object {
        "result": Object {
          "_id": "b19999999999999999999999",
          "cameras": Array [
            "c1bbbbbbbbbbbbbbbbbbbbbb",
            "c2bbbbbbbbbbbbbbbbbbbbbb",
            "c3bbbbbbbbbbbbbbbbbbbbbb",
          ],
          "isActive": false,
          "name": "pn1",
          "operatorCameraMapping": Array [
            Object {
              "cameras": Array [
                "c1bbbbbbbbbbbbbbbbbbbbbb",
                "c3bbbbbbbbbbbbbbbbbbbbbb",
              ],
              "operator": "u1",
            },
            Object {
              "cameras": Array [
                "c2bbbbbbbbbbbbbbbbbbbbbb",
              ],
              "operator": "u2",
            },
          ],
          "operators": Array [
            "u1",
            "u2",
          ],
          "shot": 1,
        },
      },
    },
    "presets": Object {
      "c1bbbbbbbbbbbbbbbb098765": Object {
        "result": Object {
          "_id": "c1bbbbbbbbbbbbbbbb098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 0,
          "project": "-",
        },
      },
      "c1bbbbbbbbbbbbbbbb198765": Object {
        "result": Object {
          "_id": "c1bbbbbbbbbbbbbbbb198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 1,
          "project": "-",
        },
      },
      "c1bbbbbbbbbbbbbbbb298765": Object {
        "result": Object {
          "_id": "c1bbbbbbbbbbbbbbbb298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 2,
          "project": "-",
        },
      },
      "c1bbbbbbbbbbbbbbbb398765": Object {
        "result": Object {
          "_id": "c1bbbbbbbbbbbbbbbb398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 3,
          "project": "-",
        },
      },
    },
    "projects": Object {
      "b19999999999999999999999": Object {
        "result": Object {
          "_id": "b19999999999999999999999",
          "cameras": Array [
            "c1bbbbbbbbbbbbbbbbbbbbbb",
            "c2bbbbbbbbbbbbbbbbbbbbbb",
            "c3bbbbbbbbbbbbbbbbbbbbbb",
          ],
          "isActive": false,
          "name": "pn1",
          "operatorCameraMapping": Array [
            Object {
              "cameras": Array [
                "c1bbbbbbbbbbbbbbbbbbbbbb",
                "c3bbbbbbbbbbbbbbbbbbbbbb",
              ],
              "operator": "u1",
            },
            Object {
              "cameras": Array [
                "c2bbbbbbbbbbbbbbbbbbbbbb",
              ],
              "operator": "u2",
            },
          ],
          "operators": Array [
            "u1",
            "u2",
          ],
          "shot": 1,
        },
      },
    },
    "users": Object {
      "u1": Object {
        "result": Object {
          "_id": "u1",
          "email": "u1",
        },
      },
    },
  },
  "updateState": Object {},
}
`;

exports[`free unused presets after program Update works as planned: after All having been freed up again 2`] = `
Object {
  "lists": Object {
    "list.presetModel": Object {
      "limit": 5,
      "result": Array [
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 0,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 1,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 2,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 3,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 4,
          "project": "-",
        },
      ],
      "skip": 0,
      "total": 100,
    },
  },
}
`;

exports[`free unused presets after program Update works as planned: after reservation of four presets 1`] = `
Object {
  "createState": Object {
    "freePresetGetter.presetModel": Object {
      "result": "c1bbbbbbbbbbbbbbbb398765",
    },
  },
  "getState": Object {
    "presets": Object {
      "c1bbbbbbbbbbbbbbbb098765": Object {
        "result": Object {
          "_id": "c1bbbbbbbbbbbbbbbb098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 0,
          "project": "b19999999999999999999999",
        },
      },
      "c1bbbbbbbbbbbbbbbb198765": Object {
        "result": Object {
          "_id": "c1bbbbbbbbbbbbbbbb198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 1,
          "project": "b19999999999999999999999",
        },
      },
      "c1bbbbbbbbbbbbbbbb298765": Object {
        "result": Object {
          "_id": "c1bbbbbbbbbbbbbbbb298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 2,
          "project": "b19999999999999999999999",
        },
      },
      "c1bbbbbbbbbbbbbbbb398765": Object {
        "result": Object {
          "_id": "c1bbbbbbbbbbbbbbbb398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 3,
          "project": "b19999999999999999999999",
        },
      },
    },
    "projects": Object {
      "b19999999999999999999999": Object {
        "result": Object {
          "_id": "b19999999999999999999999",
          "cameras": Array [
            "c1bbbbbbbbbbbbbbbbbbbbbb",
            "c2bbbbbbbbbbbbbbbbbbbbbb",
            "c3bbbbbbbbbbbbbbbbbbbbbb",
          ],
          "isActive": true,
          "name": "pn1",
          "operatorCameraMapping": Array [
            Object {
              "cameras": Array [
                "c1bbbbbbbbbbbbbbbbbbbbbb",
                "c3bbbbbbbbbbbbbbbbbbbbbb",
              ],
              "operator": "u1",
            },
            Object {
              "cameras": Array [
                "c2bbbbbbbbbbbbbbbbbbbbbb",
              ],
              "operator": "u2",
            },
          ],
          "operators": Array [
            "u1",
            "u2",
          ],
          "shot": 1,
        },
      },
    },
    "users": Object {
      "u1": Object {
        "result": Object {
          "_id": "u1",
          "email": "u1",
        },
      },
    },
  },
  "updateState": Object {},
}
`;

exports[`free unused presets after program Update works as planned: after reservation of four presets 2`] = `
Object {
  "lists": Object {
    "list.presetModel": Object {
      "limit": 5,
      "result": Array [
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 0,
          "project": "b19999999999999999999999",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 1,
          "project": "b19999999999999999999999",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 2,
          "project": "b19999999999999999999999",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 3,
          "project": "b19999999999999999999999",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 4,
          "project": "-",
        },
      ],
      "skip": 0,
      "total": 100,
    },
  },
}
`;

exports[`free unused presets after program Update works as planned: before anything 1`] = `
Object {
  "lists": Object {
    "list.presetModel": Object {
      "limit": 5,
      "result": Array [
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 0,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 1,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 2,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 3,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 4,
          "project": "-",
        },
      ],
      "skip": 0,
      "total": 100,
    },
  },
}
`;
